fix reservations bug
